crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_PEP_695_`ParamSpec`_-_`ParamSpec`_cannot_s…_(8243f67799c93e3c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - PEP 695 `ParamSpec` - `ParamSpec` cannot specialize a `TypeVar`, and vice versa
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/paramspec.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Callable
 2 | 
 3 | class OnlyTypeVar[T]:
 4 |     attr: T
 5 | 
 6 | class TypeVarAndParamSpec[T, **P]:
 7 |     attr: Callable[P, T]
 8 | 
 9 | def f[**P, T]():
10 |     # error: [invalid-type-arguments] "ParamSpec `P` cannot be used to specialize type variable `T`"
11 |     a: OnlyTypeVar[P]
12 | 
13 |     # error: [invalid-type-arguments] "ParamSpec `P` cannot be used to specialize type variable `T`"
14 |     b: TypeVarAndParamSpec[P, [int]]
15 | 
16 | class OnlyParamSpec[**P]:
17 |     attr: Callable[P, None]
18 | 
19 | # This is fine due to the special case whereby `OnlyParamSpec[T]` is interpreted the same as
20 | # `OnlyParamSpec[[T]]`, due to the fact that `OnlyParamSpec` is only generic over a single
21 | # `ParamSpec` and no other type variables.
22 | def func2[T](c: OnlyParamSpec[T], other: T):
23 |     reveal_type(c.attr)  # revealed: (T@func2, /) -> None
24 | 
25 | class ParamSpecAndTypeVar[**P, T]:
26 |     attr: Callable[P, T]
27 | 
28 | # error: [invalid-type-arguments] "Type argument for `ParamSpec` must be either a list of types, `ParamSpec`, `Concatenate`, or `...`"
29 | def func3[T](c: ParamSpecAndTypeVar[T, int], other: T): ...
```

# Diagnostics

```
error[invalid-type-arguments]: ParamSpec `P` cannot be used to specialize type variable `T`
  --> src/mdtest_snippet.py:11:20
   |
11 |     a: OnlyTypeVar[P]
   |                    ^
   |
  ::: src/mdtest_snippet.py:3:19
   |
 3 | class OnlyTypeVar[T]:
   |                   - Type variable `T` defined here
   |
  ::: src/mdtest_snippet.py:9:9
   |
 9 | def f[**P, T]():
   |         - ParamSpec `P` defined here
   |

```

```
error[invalid-type-arguments]: ParamSpec `P` cannot be used to specialize type variable `T`
  --> src/mdtest_snippet.py:14:28
   |
14 |     b: TypeVarAndParamSpec[P, [int]]
   |                            ^
   |
  ::: src/mdtest_snippet.py:6:27
   |
 6 | class TypeVarAndParamSpec[T, **P]:
   |                           - Type variable `T` defined here
   |
  ::: src/mdtest_snippet.py:9:9
   |
 9 | def f[**P, T]():
   |         - ParamSpec `P` defined here
   |

```

```
error[invalid-type-arguments]: Type argument for `ParamSpec` must be either a list of types, `ParamSpec`, `Concatenate`, or `...`
  --> src/mdtest_snippet.py:29:37
   |
29 | def func3[T](c: ParamSpecAndTypeVar[T, int], other: T): ...
   |                                     ^
   |

```
